Use red not purple for strings

--- a/preamble.tex
+++ b/preamble.tex
@@ -32,7 +32,7 @@
   showstringspaces=false,
   showtabs=false,
   stepnumber=5,
-  stringstyle=\color{purple},
+  stringstyle=\color{red},
   tabsize=2,
   title=\lstname
 }
