--- a/preamble.tex
+++ b/preamble.tex
@@ -19,7 +19,7 @@
   commentstyle=\color{green},
   columns=flexible,
   deletekeywords={},
-  escapeinside={--<*}{*>},
+  escapeinside={<*}{*>},
   extendedchars=true,
   keepspaces=true,
   keywordstyle=\color{blue},
